--- a/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
@@ -1,22 +1,35 @@
-﻿@using VidhayakApp.Web.ViewModels.AppUser
+﻿@using VidhayakApp.Core.Entities
+@using VidhayakApp.Web.ViewModels
 @using X.PagedList.Mvc.Core;
 @using X.PagedList;
-@model IPagedList<UserDetailAndFormDetailOnAppUserDashboardViewModel>
-@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@model FilterViewModel
+
+ @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor 
 
 @{
     ViewData["Title"] = "Complaint";
-    Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+
     var context = HttpContextAccessor.HttpContext;
-    // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+
+    if (loggedInRoleId == 2)
+    {
+        Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+    }
+    // // Use httpContext as needed
+    string dateToday = DateTime.Now.ToString("dd-mm-yyyy");
 
 }
 
-@if(loggedInId == null)
+@* @if(loggedInId == null)
 {
     context.Response.Redirect("/Account/Login");
-}else{
+}else{ *@
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,6 +39,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Convert | Export html Table to CSV & EXCEL File</title>
     <link rel="stylesheet" type="text/css" href="~/css/UserDashboardTable.css">
+    @* <link rel="stylesheet" type="text/css" href="~/css/filter.css"> *@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         
@@ -35,6 +49,7 @@
     <main class="table" id="customers_table">
         <section class="table__header">
             <h3>@ViewData["Title"]</h3>
+               
             <div class="input-group">
                 <input type="search" placeholder="Search Data...">
                 @*  <img src="~/dist/img/search.png" alt=""> *@
@@ -49,9 +64,29 @@
                     <label for="export-file" id="toCSV">CSV <img src="~/dist/img/csv.png" alt=""></label>
                     <label for="export-file" id="toEXCEL">EXCEL <img src="~/dist/img/excel.png" alt=""></label>
                 </div>
+            <div>
             </div> *@
         </section>
-        <section class="table__body">
+            <form method="get" >
+    <section>
+        <section class="form-group" style="margin-top:10px; margin-right:0px">
+                    <input asp-for="FromDate" class="filter" id="fromDate" type="date" name="fromDate" placeholder="@dateToday" value="@ViewData["FromDate"]">
+                    <input asp-for="ToDate" class="filter" id="toDate" type="date" name="toDate" placeholder="@dateToday" value="@ViewData["ToDate"]">
+             <select asp-for="statusType" name="statusType" id="statusInput" class="filter" >
+                <!-- Options here -->
+                <option value="">Select...</option>
+                <option value="@StatusType.Pending">Pending</option>
+                <option value="@StatusType.InProgress">InProgress</option>
+                <option value="@StatusType.Completed">Completed</option>
+                <option value="@StatusType.Closed">Closed</option>
+                <option value="@StatusType.Rejected">Rejected</option>
+             </select>
+            <button asp-controller="AppUser" asp-action="Complaint" type="submit" id="filtersearchbtn" class="btn btn-primary">Search</button>
+        </section>
+    </section>
+</form>
+
+        <section class="table__body" id="complaintsTable">
             <table>
                     
                   
@@ -76,7 +111,7 @@
                 </thead>
                 <tbody>
 
-                    @foreach (var userDetail in Model)
+                    @foreach (var userDetail in Model.userDetailAndFormDetailOnAppUserDashboardViewModel)
                     {
                  
                         <tr>
@@ -105,7 +140,7 @@
             
             </table>
                     <div>
-                        @Html.PagedListPager(Model, page => Url.Action("Complaint", new { pageId = page }), new PagedListRenderOptions
+                        @Html.PagedListPager(Model.userDetailAndFormDetailOnAppUserDashboardViewModel, page => Url.Action("Complaint", new { pageId = page }), new PagedListRenderOptions
                        {
                            // DisplayLinkToFirstPage = PagedListDisplayMode.Always,
                            // DisplayLinkToLastPage = PagedListDisplayMode.Always,
@@ -126,13 +161,16 @@
                     </div>
         </section>
     </main>
+    <!-- Reference the external JavaScript file -->
+    <script src="~/js/filterData.js"></script>
+    
     <script src="~/js/UserDashboardTable.js"></script>
 
 </body>
 
 </html>
 
-}
+@* } *@
 
 
 
