--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -1,7 +1,8 @@
-﻿@using VidhayakApp.Web.ViewModels.AppUser
+﻿@using VidhayakApp.Core.Entities
+@using VidhayakApp.Web.ViewModels
 @using X.PagedList.Mvc.Core;
 @using X.PagedList;
-@model IPagedList<UserDetailAndFormDetailOnAppUserDashboardViewModel>
+@model FilterViewModel
 
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
@@ -11,6 +12,18 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
+    var loggedInRoleId = context.Session.GetInt32("RoleId");
+
+    if (loggedInRoleId == 2)
+    {
+        Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+    }
+
+    string dateToday = DateTime.Now.ToString("dd-mm-yyyy");
 
 }
 
@@ -51,6 +64,24 @@
                 </div>
             </div> *@
         </section>
+            <form method="get">
+                <section>
+                    <section class="form-group" style="margin-top:10px; margin-right:0px">
+                        <input asp-for="FromDate" class="filter" id="fromDate" type="date" name="fromDate" placeholder="@dateToday" value="@ViewData["FromDate"]">
+                        <input asp-for="ToDate" class="filter" id="toDate" type="date" name="toDate" placeholder="@dateToday" value="@ViewData["ToDate"]">
+                        <select asp-for="statusType" name="statusType" id="statusInput" class="filter">
+                            <!-- Options here -->
+                            <option value="">Select...</option>
+                            <option value="@StatusType.Pending">Pending</option>
+                            <option value="@StatusType.InProgress">InProgress</option>
+                            <option value="@StatusType.Completed">Completed</option>
+                            <option value="@StatusType.Closed">Closed</option>
+                            <option value="@StatusType.Rejected">Rejected</option>
+                        </select>
+                        <button asp-controller="AppUser" asp-action="Demand" type="submit" id="filtersearchbtn" class="btn btn-primary">Search</button>
+                    </section>
+                </section>
+            </form>
         <section class="table__body">
             <table>
                 <thead>
@@ -73,7 +104,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var userDetail in Model)
+                    @foreach (var userDetail in Model.userDetailAndFormDetailOnAppUserDashboardViewModel)
                     {
                  
                         <tr>
@@ -100,7 +131,7 @@
                 </tbody>
             </table>
                     <div>
-                        @Html.PagedListPager(Model, page => Url.Action("Demand", new { pageId = page }), new PagedListRenderOptions
+                        @Html.PagedListPager(Model.userDetailAndFormDetailOnAppUserDashboardViewModel, page => Url.Action("Demand", new { pageId = page }), new PagedListRenderOptions
                        {
                            // DisplayLinkToFirstPage = PagedListDisplayMode.Always,
                            // DisplayLinkToLastPage = PagedListDisplayMode.Always,
