--- a/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
@@ -223,6 +223,30 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" asp-action="Complaint" asp-controller="AppUser">
+                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                            <i class="ni ni-app text-info text-sm opacity-10"></i>
+                        </div>
+                        <span class="nav-link-text ms-1">Complaints List</span>
+                    </a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="Demand" asp-controller="AppUser">
+                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                            <i class="ni ni-app text-info text-sm opacity-10"></i>
+                        </div>
+                        <span class="nav-link-text ms-1">Complaints List</span>
+                    </a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="Suggestion" asp-controller="AppUser">
+                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                            <i class="ni ni-app text-info text-sm opacity-10"></i>
+                        </div>
+                        <span class="nav-link-text ms-1">Complaints List</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" asp-action="ListUsers" asp-controller="Admin">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-app text-info text-sm opacity-10"></i>
