10-04-2024 11:55am if roleid =2 then show all complaints demands and suggestion code fixed

--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -38,7 +38,7 @@
             </div>
           
         </section>
-            <form method="get">
+           @*  <form method="get">
                 <section>
                     <section class="form-group" style="margin-top:10px; margin-right:0px">
                         <input asp-for="FromDate" class="filter" id="fromDate" type="date" name="fromDate" placeholder="@dateToday" value="@ViewData["FromDate"]">
@@ -56,7 +56,7 @@
                     </section>
                 </section>
             </form>
-        <section class="table__body">
+      *@   <section class="table__body">
             <table>
                 <thead>
                     <tr>
