10-04-2024 17:53pm DepartmentDisableScheme file changed a little bit

--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -93,7 +93,7 @@
 
                                     <div class="form-group">
                                         <label>Upload Image</label>
-                                        <input asp-for="ImageFile" type="file" name="ImageFile" class="form-control-file" />
+                                        <input asp-for="ImageFile" type="file" name="ImageFile" class="form-control-file" id="ImageUploadId" />
                                     </div>
 
 
