11-04-2024 15:20pm made changes in shemedisable.js and in frontend too also private organization problem in demand also fixed

--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -317,7 +317,7 @@
     </footer>
 
 
-    <script src="~/Argon/js/core-popper.min.js"></script>
+ @*    <script src="~/Argon/js/core-popper.min.js"></script>
     <script src="~/Argon/js/core-bootstrap.min.js"></script>
     <script src="~/Argon/js/plugins-perfect-scrollbar.min.js"></script>
     <script src="~/Argon/js/plugins-smooth-scrollbar.min.js"></script>
@@ -333,7 +333,7 @@
 
     <script async defer src="~/Argon/js/buttons.github.io-buttons.js"></script>
 
-    <script src="~/Argon/js/js-argon-dashboard.min.js"></script>
+    <script src="~/Argon/js/js-argon-dashboard.min.js"></script> *@
 </body>
 </html>
 
