--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -108,7 +108,7 @@
 
                                     <div class="form-group">
                                         <label>Sub-Category</label>
-                                        <select id="subCategoryDemandInput" class="form-control" asp-for="SubCategoryTypeId" onchange="handleDemandSubCategoryChange()">
+                                        <select id="subCategoryDemandInput" class="form-control" asp-for="SubCategoryTypeIdForDemand" onchange="handleDemandSubCategoryChange()">
                                             <!-- Options here -->
                                             <option selected="">Select...</option>
                                             <option value="@(SubCategoryType.GovernmentSchemes)">Related to Government Schemes</option>
