--- a/VidhayakApp.Web/Views/Shared/_BlankLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_BlankLayout.cshtml
@@ -8,3 +8,43 @@
     </div><!-- /.container-fluid -->
 </section>
 
+<script src="~/plugins/moment/moment.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="~/Argon/js/plugins-perfect-scrollbar.min.js"></script>
+<!-- Smooth Scrollbar -->
+<script src="~/Argon/js/plugins-smooth-scrollbar.min.js"></script>
+<!-- Chart.js -->
+<script src="~/Argon/js/plugins-chartjs.min.js"></script>
+<!-- Sparkline -->
+<script src="~/plugins/sparklines/sparkline.js"></script>
+<!-- JQVMap -->
+<script src="~/Argon/js/core-popper.min.js"></script>
+<!-- jQuery -->
+@* <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script> *@
+<!-- jQuery UI tooltip conflict resolution -->
+<!-- AdminLTE App -->
+<!-- Perfect Scrollbar -->
+<!-- OverlayScrollbars -->
+@*   <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script> *@
+<script src="~/plugins/jquery/jquery.min.js"></script>
+<!-- jQuery UI -->
+<script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
+<!-- jQuery Knob Chart -->
+<script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
+<!-- Moment.js -->
+<script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<!-- Daterangepicker -->
+<script src="~/Argon/js/core-bootstrap.min.js"></script>
+<script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="~/plugins/daterangepicker/daterangepicker.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- GitHub Buttons -->
+<script async defer src="~/Argon/js/buttons.github.io-buttons.js"></script>
+<!-- Argon Dashboard -->
+<script src="~/Argon/js/js-argon-dashboard.min.js"></script>
+
+<script src="~/dist/js/adminlte.js"></script>
+<!-- Summernote -->
+<script src="~/plugins/summernote/summernote-bs4.min.js"></script>
+
