--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-
+      @*   <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script> *@
 </body>
 
 </html>
