11-04-2024 18:27pm successfull and unsucessfull page UI change and some other changes

--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -275,7 +275,7 @@
                                     <i class='bx bxs-user'></i>
                                 </div>
                                     <div class="mb-3 col-md-6">
-                                    <input asp-for="MobileNumber" type="number" class="form-control" id="MobileNumber" aria-describedby="MobHelp" placeholder="Enter Mobile...">
+                                    <input asp-for="MobileNumber" type="tel" class="form-control" id="MobileNumber" aria-describedby="MobHelp" placeholder="Enter Mobile...">
                                     <span class="text-danger">@Html.ValidationMessageFor(m => m.MobileNumber)</span>
                                     <i class='bx bxs-user'></i>
                                 </div>
