--- a/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
@@ -235,7 +235,7 @@
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-app text-info text-sm opacity-10"></i>
                         </div>
-                        <span class="nav-link-text ms-1">Complaints List</span>
+                        <span class="nav-link-text ms-1">Demands List</span>
                     </a>
                 </li> 
                 <li class="nav-item">
@@ -243,7 +243,7 @@
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-app text-info text-sm opacity-10"></i>
                         </div>
-                        <span class="nav-link-text ms-1">Complaints List</span>
+                        <span class="nav-link-text ms-1">Suggestions List</span>
                     </a>
                 </li>
                 <li class="nav-item">
